# LazySlide

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  example.ipynb  mkdocs.yml  pyproject.toml
.github/: .pull_request_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  build_lazyslide.yaml  docker_image.yaml  lint.yaml  test_models.yml  update-datasets.yml
assets/: logo.ai  logo_old.ai
docs/: Makefile  clean_up.py  development.md  index.md
docs/api/: WSI.md  index.md  reader.md
docs/source/: avail_models.md  avail_models.rst  cli.rst  conf.py  contributing.rst  contributors.rst  glossary.rst  how-to.md  index.rst  installation.rst  nextflow.rst  references.bib  references.rst
docs/source/_static/: custom.css
docs/source/api/: .gitignore  cv.rst  index.rst  io.rst  metrics.rst  models.rst  plotting.rst  preprocess.rst  segmentation.rst  tools.rst
docs/source/concepts/: choosing-models.md  data-model.md  index.md  resolution.md  workflow.md
docs/source/contributing/: index.md  new_models.md  release_cycle.md  setup.md
docs/source/getting-started/: digital-pathology-primer.md  first-analysis.md  index.md
docs/source/how-to/: annotations.md  index.md  installation.md  models-and-features.md  multiple-slides.md  segmentation.md  slides-and-storage.md  tissue-and-tiles.md  troubleshooting.md  visualization.md
docs/source/reference/: formats.md  index.md  outputs.md  workflow-cheatsheet.md
docs/source/tutorial/: .gitignore  00_WSI_intro.ipynb  00_intro_wsi.ipynb  01_preprocessing.ipynb  02_anatomical_domains.ipynb  02_feature_extraction.ipynb  02_spatial_domains.ipynb  03_multimodals.ipynb  03_multiple_slides.ipynb  03_plotting.ipynb  04_data_loader.ipynb  04_genomics_integration.ipynb  05_training_models.ipynb  cell-segmentation.ipynb  index.rst
docs/source/tutorials/: 00_intro_wsi.ipynb  01_preprocessing.ipynb  02_feature_extraction.ipynb  03_multiple_slides.ipynb  04_genomics_integration.ipynb  05_cell-segmentation.ipynb  06_visualization.rst  07_zero-shot-learning.ipynb  cell-segmentation.ipynb  index.rst  matplotlibrc  visualization.ipynb
lazyslide/: __init__.py  __main__.py  get.py  h5.py  io.py  normalizer.py  plotting.py  torch_dataset.py  utils.py  wsi.py
lazyslide/backends/: __init__.py  base.py  openslide.py  vips.py
lazyslide/cv/scorer/: __init__.py  base.py  module.py  utils.py
lazyslide/cv/transform/: compose.py
lazyslide/cv_mods/: __init__.py  base.py  mods.py
lazyslide/data/: __init__.py  datasets.py  prepare.py
lazyslide/filter/: __init__.py  base.py  model.py  mods.py
lazyslide/loader/: __init__.py  dataset.py  loader.py  normalizer.py  slide_balaned_loader.py  slides_balanced_loader.py  slides_balaned_loader.py
lazyslide/models/: __init__.py  conch.py  ctranspath.py  hovernet.py  plip.py  retccl.py
lazyslide/pl/: __init__.py  api.py  viewer.py
lazyslide/pp/: __init__.py  tiles.py  tissue_segment.py
lazyslide/reader/: __init__.py  base.py  cucim.py  openslide.py  utils.py
lazyslide/readers/: __init__.py  base.py  cucim.py  openslide.py  utils.py  vips.py
lazyslide/tl/: __init__.py  annotate.py  cell_segmentation.py  domain.py  features.py  tissue_props.py
scripts/: model_param_sizes.py  prime_hf_cache.py  tag_datasets.py  update_datasets.py
src/lazyslide/: __init__.py  __main__.py  _api.py  _const.py  _lazy.py  _setting.py  _utils.py  metrics.py  pl.py  pp.py  tl.py  utils.py
src/lazyslide/_plotting/: _api.py  _report.py  _viewer.py  _wsi_viewer.py
src/lazyslide/_preprocess/: __init__.py  _graph.py  _load.py  _tiles.py  _tissue.py
src/lazyslide/_tools/: __init__.py  _domain.py  _features.py  _signatures.py  _text_annotate.py  _tissue_props.py  _utag.py
src/lazyslide/cv/: __init__.py  mask.py  tiles_merger.py
src/lazyslide/data/: __init__.py  datasets.py  prepare.py
src/lazyslide/datasets/: __init__.py  _sample.py
src/lazyslide/io/: __init__.py  _annotaiton.py  _annotation.py
src/lazyslide/metrics/: __init__.py  segmentation.py  topk.py
src/lazyslide/models/: __init__.py  _model_registry.py  _repr.py  _utils.py  base.py  conch.py  gigapath.py  model_registry.csv  model_registry.json  model_registry_schema.json  plip.py  uni.py
src/lazyslide/pl/: __init__.py  api.py  report.py  viewer.py
src/lazyslide/plotting/: __init__.py  _api.py  _report.py  _viewer.py  _wsi_viewer.py
src/lazyslide/pp/: __init__.py  _utils.py  graph.py  load.py  tiles.py  tissue.py
src/lazyslide/preprocess/: __init__.py  _graph.py  _load.py  _tiles.py  _tissue.py  _utils.py
src/lazyslide_cv/: colornorm.py
src/wsi_data/: __init__.py  _image.py  _open_wsi.py  _store.py  data.py
tests/: __init__.py  conftest.py  mock_models.py  pytest.ini  test_cv.py  test_cv_transform.py  test_datasets.py  test_example.py  test_features_ext_agg.py  test_get.py  test_huggingface_offline.py  test_io.py  test_io_ndpa.py  test_loader.py  test_mask.py  test_model_registry.py  test_models_back_compat.py  test_plotting.py  test_pp.py  test_preprocessing.py  test_reader.py  test_seg.py  test_segmentation.py  test_segmentation_metrics.py  test_speed.py  test_text_vision_query.py  test_tiles_merger.py  test_tl.py  test_tools_feature_prediction.py  test_tools_spatial_features.py  test_tools_text_vision_query.py  test_tools_tile_prediction.py  test_tools_virtual_stain.py  test_virtual_stain.py  test_zero_shot.py  tests_plotting.py
tests/data/: annotations_malformed.ndpa  annotations_mixed.ndpa
tests/models/: comp_predictions.py  test_models_general.py  test_models_image_generation.py  test_models_segmentation.py  test_models_style_transfer.py  test_models_text_vision.py  test_models_tile_prediction.py  test_models_vision.py  test_stpath.py  test_stpath_equivalence.py
workflow/: main.nf
zs/: __init__.py  get.py  wsi.py
zs/data/: dataloder.py
zs/preprocess/: tiles.py  tissue_segment.py
zs/reader/: base.py  openslide.py  utils.py
zs/tools/: features.py
(+121 files in other folders)
